 - Fix: Some of the numbers in the APIs are now returned as numbers instead of strings.
 - Mod: Add commas to total cargo in TM and SST.
 - Fix: Initialize date_created field for spies.
 - Mod: Can cancel more than one build at a time via API.
 - Add: Cancel All button to dev ministry.
 - Fix: Abandoned planets' build queues are now cancelled.

3.0917:
 - Fix: Recalc stats when building 1+x plans.
 - Fix: Station incoming shows your incoming as own, not station owner's incoming.
 - Fix: Better input validation for fleet.
 - Fix: On flip, remove any excavator sites.
 - UI : SST list only shows valid SST targets.
 - Fix: Duck quacking now shows RPC updates in UI. (API change.)
 - UI : Scow images updated (thanks Husky).
 - Fix: Remove item from SST trade now shows proper hold size requirement.
 - UI : Add propaganda boost to the happy popup (spy icon).
 - UI : Promotional events show up during the event.
 - Mod: AI spies get easy jobs their first shift.

3.0916:
 - Mod: Jackpot enhanced.
 - Fix: If parliament missing, better error handling.
 - Fix: Make sure scows display empty cargo on return.
 - Mod: Reduce some red tape.
 - Fix: Deployed bleeders shouldn't get subbed.
 - Fix: Destroying IBS removes all influence.
 - Fix: AIs' stations can now be destroyed.
 - Fix: Make owner of star a bit more predictable in case of ties.
 - Fix: Gauntlet now works at uni+1 level, too.
 - Fix: Saben will destroy planets with a bit more randomness.
 - Mod: Can stake your own stake.
 - Mod: Show plans in SSL in a predictable order (sorted!).

3.0915:
 - Fix: Reduce the wild resource fluctuations during planet ticking.
 - Mod: Evein plans get an extra 5 days start time for building.
 - Add: Lacuna promotions.
 - Add: Orbits as BHG targets.
 - UI : Add build-boost-from-happy to happy popup.
 - Add: Fingerprinting browsers.
 - UI : Essentia panel redone.
 - Mod: Better packaging for plans using flat boxes. (1,000 space used instead of 10,000)

3.0914:
 - UI : Evein draining re-added.