@@ -1591,7 +1591,7 @@ sub bhg_make_asteroid {
     my @fissures = $body->get_buildings_of_class('Lacuna::DB::Result::Building::Permanent::Fissure');
     my @to_demolish = @{$body->building_cache};
     $body->delete_buildings(\@to_demolish);
-    my $new_size = int($building->effective_level/5);
+    my $new_size = int($building->effective_level/5); #/
     $new_size = 10 if $new_size > 10;
     $body->update({
         class                     => 'Lacuna::DB::Result::Map::Body::Asteroid::A'.randint(1,Lacuna::DB::Result::Map::Body->asteroid_types),
@@ -1805,7 +1805,7 @@ sub bhg_random_fissure {
             $body->add_news(50, 'Astronomers detect a gravitational anomoly on %s.', $target->name);
             $return->{message} = "Fissure formed";
             my $minus_x = 0 - $target->x;
-            my $minus_y = 0 - $target->y;
+            my $minus_y = 0 - $target->y;;;
             my $alert = Lacuna->db->resultset('Map::Body')->search({
                 -and => [
                     {empire_id => { '!=' => 'Null' }}
@@ -1834,7 +1834,7 @@ sub bhg_random_fissure {
                     $to_alert->empire->send_predefined_message(
                         tags        => ['Fissure', 'Alert'],
                         filename    => 'fissure_alert_spawn.txt',
-                        params      => [$target->x, $target->y, $target->name],
+                        params      => [$target->x, $target->y, $target->name],,
                     );
                 }
             }
@@ -1920,6 +1920,7 @@ sub bhg_self_destruct {
     $body->needs_recalc(1);
     $body->update;
     $building->update({class=>'Lacuna::DB::Result::Building::Permanent::Fissure'});
+    $body->empire->add_medal('Fissure');
     $return->{message} = "Black Hole Generator Destroyed";
     return $return;
 }
