@@ -6,6 +6,7 @@
  - Mod: Can cancel more than one build at a time via API.
  - Add: Cancel All button to dev ministry.
  - Fix: Abandoned planets' build queues are now cancelled.
+ - Fix: Fissure medal when you cause a fissure with BHG.
 
 3.0917:
  - Fix: Recalc stats when building 1+x plans.
